--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export(cohensd_A)
 export(cohensd_B)
 export(cohensd_OG)
+export(cohensdcalc)
 export(confidint)
 export(deltamad_A)
 export(deltamad_B)
 export(deltamad_OG)
+export(deltamadcalc)
 importFrom(stats,mad)
 importFrom(stats,median)
 importFrom(stats,qt)
